--- a/www/templates/admin_1/assets/css/app.css
+++ b/www/templates/admin_1/assets/css/app.css
@@ -2,3 +2,14 @@
 .alert {font-size: 13px;}
 
 .btn-xxs {padding: 3px 5px; font-size: 14px;}
+
+.course-list {}
+.course-list .course-list-item {}
+.course-list .thumbnail img {width: 100%; height: 100px; background-color: #aaa;}
+.course-list .item-title {font-size: 18px;}
+.course-list .item-text {font-size: 14px;}
+.course-list .type-title {font-size: 16px; display: block; line-height: 5px; padding-top: 20px;}
+.course-list .type-info, .course-list .price-info {font-size: 12px;}
+.course-list .price-value {font-size: 24px; color: #00AAFF;}
+.course-list .fancy-radio input[type="radio"] + span i:after {background-color: #00AAFF;}
+
