--- a/templates/admin_1/assets/css/app.css
+++ b/templates/admin_1/assets/css/app.css
@@ -28,6 +28,8 @@
 
 /*#########################################################################################*/
 
+.navbar-default .brand {padding: 0px 30px;}
+
 .video-wrap {position: relative; padding-bottom: 56.25%; /* 16:9 */ padding-top: 25px; height: 0;}
 .video-wrap iframe {position: absolute; top: 0; left: 0; width: 100%; height: 100%;}
 
