--- a/templates/admin_1/assets/css/app.css
+++ b/templates/admin_1/assets/css/app.css
@@ -68,3 +68,6 @@
 #enroll-top-panel .balance-block-wrap .btn {margin-top: 0px;}
 #enroll-top-panel .balance-block {font-size: 24px; display: inline-block; padding-left: 30px; vertical-align: top; margin-top: 0px; line-height: 30px;}
 #enroll-top-panel .balance-block .balance-value {color: #00AAFF; font-size: 26px;}
+
+
+.group-image-gallery {display: flex; flex-wrap: wrap;}
