--- a/templates/admin_1/assets/css/app.css
+++ b/templates/admin_1/assets/css/app.css
@@ -1,4 +1,4 @@
-.auth-box {padding: 0 30px; width: 30%;}
+.auth-box {padding: 25px 30px; width: 30%; height: auto; min-height: 450px;}
 .alert {font-size: 13px;}
 .btn-xxs {padding: 3px 5px; font-size: 14px;}
 .btn-3xs {padding: .2em .6em .3em; font-size: 75%; line-height: 1;}
@@ -69,5 +69,7 @@
 #enroll-top-panel .balance-block {font-size: 24px; display: inline-block; padding-left: 30px; vertical-align: top; margin-top: 0px; line-height: 30px;}
 #enroll-top-panel .balance-block .balance-value {color: #00AAFF; font-size: 26px;}
 
-
+.profile-header .profile-main {background: none; background-color: #676a6d;}
+.profile-header .profile-main .img-circle {border: 2px solid #fff;}
 .group-image-gallery {display: flex; flex-wrap: wrap;}
+.group-reviews-list {display: flex; flex-wrap: wrap;}
