--- a/templates/admin_1/assets/css/app.css
+++ b/templates/admin_1/assets/css/app.css
@@ -70,6 +70,7 @@
 #enroll-top-panel .balance-block {font-size: 24px; display: inline-block; padding-left: 30px; vertical-align: top; margin-top: 0px; line-height: 30px;}
 #enroll-top-panel .balance-block .balance-value {color: #00AAFF; font-size: 26px;}
 
+.profile-header .profile-stat .stat-item  {color: #fff;}
 .profile-header .profile-main {background: none; background-color: #676a6d;}
 .profile-header .profile-main .img-circle {border: 2px solid #fff;}
 .group-image-gallery {display: flex; flex-wrap: wrap;}
