--- a/templates/admin_1/assets/css/app.css
+++ b/templates/admin_1/assets/css/app.css
@@ -165,3 +165,10 @@
 .groups-type-wrap .item.disabled .item-info ul li i,
 .groups-type-wrap .item.disabled .item-info ul li.checked i:before {color: #ccc;}
 .groups-type-wrap .item.disabled .btn {background-color: #ccc; border-color: #ccc;}
+
+.list-group-filter .list-group-item:first-child label {border-top-left-radius: 4px; border-top-right-radius: 4px;}
+.list-group-filter .list-group-item:last-child label {border-bottom-right-radius: 4px; border-bottom-left-radius: 4px;}
+.list-group-filter .list-group-item {padding: 0;}
+.list-group-filter .list-group-item label {display: block; cursor: pointer; padding: 10px 15px; margin: 0; font-weight: normal;}
+.list-group-filter .list-group-item input[type="radio"]:checked + label {background-color: #337ab7; color: #fff;}
+.list-group-filter .list-group-item input[type="radio"] {position: absolute; left: -9999px;}
