--- a/templates/admin_1/assets/css/app.css
+++ b/templates/admin_1/assets/css/app.css
@@ -177,10 +177,25 @@
 #group-user-lectures .card {display: flex; flex: 0 0 33.33%; flex-direction: column; box-sizing: border-box; padding: 0px 20px; padding-bottom: 20px;}
 #group-user-lectures .card .head {padding-bottom: 10px;}
 #group-user-lectures .card .head .title {font-size: 18px;}
-#group-user-lectures .card .body {border: 1px solid #000; height: 250px; position: relative; padding: 15px;}
-#group-user-lectures .card .body .title {text-align: center; font-size: 16px;}
+#group-user-lectures .card .body {border: 1px solid #676a6d; height: 250px; position: relative; padding: 15px; display: flex; align-items: center; justify-content: center; text-align: center; flex-wrap: wrap; flex-direction: column;  border-radius: 5px;}
+#group-user-lectures .card .body .title {text-align: center; font-size: 20px; width: 100%; margin-bottom: 20px;}
 #group-user-lectures .card .body .title.empty {}
 #group-user-lectures .card .btn-remove {position: absolute; top: 10px; right: 10px;}
 #group-user-lectures .card .actions {}
 #group-user-lectures .card .actions .btn {display: block;}
 #group-user-lectures .card .body p {}
+#group-user-lectures .card .body .bnt-remove-review {position: absolute; top: 15px; right: 15px; cursor: pointer; font-size: 20px;}
+
+
+#wall-component {}
+#wall-component .wall-panel .panel-body {padding-top: 15px;}
+#wall-component .wall-from {}
+#wall-component .wall-from--input-wrap {position: relative; margin-right: 50px; cursor: text; background: #fff; border-radius: 6px; border: solid 1px #d3d9de; padding: 10px 10px; padding-bottom: 5px;}
+#wall-component .wall-from--text-input {max-width: 100%; min-width: 100%; height: 20px; min-height: 20px; line-height: 20px; max-height: 414px; margin:0px; padding:0px; resize: none; /*overflow: hidden;*/ border: 0 none; background: transparent; outline: none;}
+#wall-component .wall-from--btn-send {position: absolute; bottom: 0px; right: -50px; font-size: 25px; padding: 0px 10px; border: 0 none; box-shadow: none; background-color: transparent; outline: none;}
+#wall-component .wall-childs .media:first-child {margin-top: 20px;}
+#wall-component .wall-child-from {padding-top: 20px; padding-left: 40px;}
+#wall-component .wall-item-tools {}
+#wall-component .wall-item-tools .btn {padding: 0px 5px; margin-right: 20px; font-size: 18px; border: 0 none; box-shadow: none; background-color: transparent; outline: none;}
+#wall-component .wall-item-tools .btn i {margin-right: 5px;}
+#wall-component .wall-wrap-childs {display: none;}
