--- a/templates/main_v1/css/style.css
+++ b/templates/main_v1/css/style.css
@@ -22413,7 +22413,7 @@ code {
   padding: 0.875rem 0.875rem;
 }
 
-select.form-control, select.asColorPicker-input, .dataTables_wrapper select,
+/*select.form-control, select.asColorPicker-input, .dataTables_wrapper select,
 .jsgrid .jsgrid-table .jsgrid-filter-row select, .select2-container--default select.select2-selection--single, .select2-container--default .select2-selection--single select.select2-search__field, select.typeahead,
 select.tt-query,
 select.tt-hint {
@@ -22421,7 +22421,7 @@ select.tt-hint {
   border: 0;
   outline: 1px solid #f6f2f2;
   color: #979797;
-}
+}*/
 
 select.form-control:focus, select.asColorPicker-input:focus, .dataTables_wrapper select:focus,
 .jsgrid .jsgrid-table .jsgrid-filter-row select:focus, .select2-container--default select.select2-selection--single:focus, .select2-container--default .select2-selection--single select.select2-search__field:focus, select.typeahead:focus,
