--- a/templates/main_v1/css/custom.css
+++ b/templates/main_v1/css/custom.css
@@ -27,6 +27,10 @@ a.text-primary:hover, a.text-primary:focus {color: #000000 !important;}
 .sidebar {background-color: #E7C2AE;}
 */
 
+/*
+#d3d9de
+*/
+
 .page-loader {position: fixed; top: 0; left: 0; right: 0; bottom: 0; z-index: 9999; display: none;}
 .page-loader:after {content: ""; position: absolute; top: 0; left: 0; right: 0; bottom: 0; background-color: #fff; opacity: 0.8;}
 .page-loader.ld-loading {display: block;}
@@ -43,6 +47,11 @@ a.text-primary:hover, a.text-primary:focus {color: #000000 !important;}
 .navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-settings {border-left: 0 none;}
 .navbar .navbar-menu-wrapper .navbar-nav .nav-item.dropdown .count-indicator:hover,
 .navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-settings .nav-link:hover {color: #9b9b9b;}
+
+.modal.modal-compact .modal-header {border-bottom: 0 none;}
+.modal.modal-compact .modal-body {padding-top: 0px !important; padding-bottom: 25px !important;}
+
+.dropdown-menu {font-size: 0.813rem;}
 
 /*=====================================================================================================*/
 
@@ -62,6 +71,11 @@ a.text-primary:hover, a.text-primary:focus {color: #000000 !important;}
 @media (max-width: 991px) {
 	.navbar .navbar-brand-wrapper {padding: 0.625rem;}
 }
+
+#sidebar .profile-name {overflow: hidden;}
+#sidebar .profile-name .name {text-overflow: ellipsis;}
+
+.ekko-lightbox.modal .modal-body {padding: 10px !important;}
 
 #main--news-block .news-item {padding-bottom: 15px;}
 
@@ -150,3 +164,72 @@ a.text-primary:hover, a.text-primary:focus {color: #000000 !important;}
 .group-reviews-list {display: flex; flex-wrap: wrap;}
 
 .message-content .media-body a {color: #25378b;}
+
+#teacher--user-homeworks {}
+#teacher--user-homeworks .nav-tabs .nav-item {position: relative; width: 70px;}
+#teacher--user-homeworks .nav-tabs .nav-item .badge {position: absolute; top: -10px; right: 5px; font-size: 11px; font-weight: 600; color: #ffffff;}
+#teacher--user-homeworks .nav-tabs .nav-link {background: #343a40; color: #ffffff; font-size: 16px;}
+#teacher--user-homeworks .nav-tabs .nav-link.active {color: #000000; background: #ffffff;}
+
+.gallery-block {display: flex; flex-wrap: wrap;}
+.gallery-block .item {width: 20%; padding: 5px 5px; box-sizing: border-box;}
+.gallery-block .item .item-wrapper {overflow: hidden; position: relative; width: 100%; padding-bottom: 100%;}
+.gallery-block .item .item-content {position: absolute; top: 0; left: 0; width: 100%; height: 100%; /*display: flex; align-items: center; justify-content: center;*/  background-color: #edeef2; border: 1px solid #d3d9de;}
+.gallery-block .item .item-content img {width: 100%; height: 100%;}
+
+
+.roadmap-component {width: 100%;}
+.roadmap-component .roadmap-container {padding-left: 320px; overflow-x: auto;}
+.roadmap-header {margin-bottom: 30px;}
+.roadmap-roulete {display: flex; flex-wrap: nowrap;}
+.roadmap-roulete .r-month {display: inline-block; height: 40px; flex-shrink: 0;}
+.roadmap-roulete .r-month-title {text-align: center; font-weight: bold; height: 35px; text-transform: uppercase;}
+.roadmap-roulete .r-week {display: inline-block; float: left; position: relative; height: 5px; width: 25px; box-sizing: border-box; border-right: 2px solid #676a6d;}
+.roadmap-roulete .r-week.first {border-left: 2px solid #676a6d;}
+.roadmap-roulete .r-week.last:after {content: ""; width: 2px; height: 20px; background-color: #676a6d; position: absolute; right: -2px; bottom: 0px;}
+.roadmap-body {/*width: 3600px;*/ position: relative;}
+.roadmap-item {position: relative; margin: 15px 0px; min-height: 80px; width: 100%;}
+.roadmap-item .item-head {display: flex;  align-items: center; justify-content: center; height: 100%; width: 300px; color: #fff; position: absolute; left: -320px; top: 0px; bottom: 0px; padding: 20px; text-align: center; font-size: 18px; border-radius: 0px;}
+.roadmap-item .item-head span {}
+
+.roadmap-item .item-head .btn-group {position: absolute; top: 5px; right: 10px;}
+.roadmap-item .item-head .btn-menu {cursor: pointer;}
+.roadmap-item .item-head .btn-menu.btn-collapse {position: absolute; top: 5px; left: 5px;}
+.roadmap-item .item-head .btn-menu.btn-collapse.collapsed i.fa-angle-up:before {content: "\f107";}
+
+.roadmap-item .items-row-wrap.collapse.in + .item-row.row-collapse {display: none;}
+
+.roadmap-item .item-row {min-height: 80px; position: relative;}
+.roadmap-item .item-row:before {content: ""; position: absolute; left: 0px; right: 0px; height: 1px; background-color: #676a6d; top: 50%; margin-top: 0px;}
+.roadmap-item .item-row .roadmap-mark {cursor: pointer; display: inline-block; position: absolute; height: 34px; top: 23px; border: 2px solid #fff; box-sizing: border-box; border-radius: 0px; min-width: 100px; text-align: center; color: #fff; font-size: 13px; font-weight: bold; line-height: 30px; padding: 0px 10px; padding-right: 30px; padding-left: 35px; box-sizing: border-box; transition: min-width 0.3s;}
+.roadmap-item .item-row .roadmap-mark > span {display: block; overflow: hidden; white-space: pre;}
+.roadmap-item .item-row .roadmap-mark:hover {/*min-width: 160px;*/ z-index: 10; transition: min-width 0.3s;}
+.roadmap-item .item-row .roadmap-mark:hover > span {/*overflow: initial;*/}
+.roadmap-item .roadmap-mark .btn-group {position: absolute; right: 10px; top: 0px;}
+.roadmap-item .roadmap-mark .btn-group .btn-menu {display: inline-block; width: 20px; cursor: pointer;}
+.roadmap-item .roadmap-mark .icon {position: absolute; top: 0px; left: 2px; border-radius: 50%; width: 30px; height: 30px; font-size: 20px;}
+
+.roadmap-mark .info {position: absolute; visibility: hidden; opacity: 0; box-sizing: border-box; bottom: 34px; left: 0px; background-color: #fff; border: 1px solid #676a6d; width: 200px; color: #676a6d; text-align: left; padding: 10px 20px; border-radius: 5px; font-size: 12px; transition: opacity 0.3s, visibility 0.3s;}
+.roadmap-mark .info ul {list-style: none; padding: 0; margin: 0; line-height: 16px; font-weight: normal;}
+.roadmap-mark:hover .info {opacity: 1; visibility: visible; transition: opacity 0.3s, visibility 0.3s;}
+
+.roadmap-body .current-week-mark {position: absolute; top: -50px; bottom: 0px; left: 300px; width: 25px; background-color: #3F92D2; opacity: 0.5; z-index: 0;}
+
+.item-color1 .colored {background-color: #0B61A4;}
+.item-color2 .colored {background-color: #7E07A9;}
+.item-color3 .colored {background-color: #F30021;}
+.item-color4 .colored {background-color: #008110;}
+.item-color5 .colored {background-color: #3F92D2;}
+.item-color6 .colored {background-color: #AC3BD4;}
+.item-color7 .colored {background-color: #F93E58;}
+.item-color8 .colored {background-color: #00C618;}
+
+.roadmap-item.item-color-default .item-head {color: #676a6d; border: 1px solid #676a6d;}
+.roadmap-item.item-color-default .item-head a {position: absolute; top: 0; left: 0; right: 0; bottom: 0; z-index: 10;}
+
+.list-group-filter .list-group-item:first-child label {border-top-left-radius: 4px; border-top-right-radius: 4px;}
+.list-group-filter .list-group-item:last-child label {border-bottom-right-radius: 4px; border-bottom-left-radius: 4px;}
+.list-group-filter .list-group-item {padding: 0;}
+.list-group-filter .list-group-item label {display: block; cursor: pointer; padding: 10px 15px; margin: 0; font-weight: normal;}
+.list-group-filter .list-group-item input[type="radio"]:checked + label {background-color: #337ab7; color: #fff;}
+.list-group-filter .list-group-item input[type="radio"] {position: absolute; left: -9999px;}
