--- a/templates/main_v1/css/custom.css
+++ b/templates/main_v1/css/custom.css
@@ -233,3 +233,6 @@ a.text-primary:hover, a.text-primary:focus {color: #000000 !important;}
 .list-group-filter .list-group-item label {display: block; cursor: pointer; padding: 10px 15px; margin: 0; font-weight: normal;}
 .list-group-filter .list-group-item input[type="radio"]:checked + label {background-color: #337ab7; color: #fff;}
 .list-group-filter .list-group-item input[type="radio"] {position: absolute; left: -9999px;}
+
+.mail-sidebar .profile-list-item {position: relative;}
+.mail-sidebar .profile-list-item .notification-ripple {top: 10px; right: 10px;}
