--- a/templates/main_v1/css/custom.css
+++ b/templates/main_v1/css/custom.css
@@ -1,36 +1,3 @@
-/*.form-check .form-check-label input[type="checkbox"] + .input-helper:before {border: solid #E7C2AE; background: #E7C2AE; border-radius: 0px;}
-.form-check .form-check-label input[type="checkbox"]:checked + .input-helper:before {background: #E7C2AE; border-radius: 0px;}
-.form-check .form-check-label input[type="checkbox"] + .input-helper:after {font-family: "Font Awesome 5 Free"; content: '\f00c'; font-size: 0.6375rem; text-align: center;}
-.form-check .form-check-label input[type="checkbox"]:checked + .input-helper:after {width: 16px;}
-
-.btn-primary, .wizard > .actions a {background-color: #E7C2AE; border-color: #E7C2AE;}
-.btn-primary:hover, .wizard > .actions a:hover {background-color: #B67F62; border-color: #B67F62;}
-.btn-primary:not(:disabled):not(.disabled):active, .wizard > .actions a:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active, .wizard > .actions a:not(:disabled):not(.disabled).active, .show > .btn-primary.dropdown-toggle, .wizard > .actions .show > a.dropdown-toggle {background-color: #B67F62; border-color: #B67F62;}
-
-
-.text-primary {color: #B67F62 !important;}
-a.text-primary:hover, a.text-primary:focus {color: #000000 !important;}
-
-
-
-.jumping-dots-loader span {background-color: #FD610F;}
-
-.alert p {font-size: 0.913rem;}
-.alert-fill-light {background-color: #E7C2AE; border-color: #E7C2AE;}
-.alert-with-icon {padding-left: 50px; position: relative;}
-.alert-with-icon > i {position: absolute; top: 20px; left: 15px;}
-
-.content-wrapper {background-color: #ffffff;}
-
-
-.navbar .navbar-brand-wrapper .navbar-brand img {width: calc(230px - 115px); height: auto;}
-.sidebar {background-color: #E7C2AE;}
-*/
-
-/*
-#d3d9de
-*/
-
 .page-loader {position: fixed; top: 0; left: 0; right: 0; bottom: 0; z-index: 9999; display: none;}
 .page-loader:after {content: ""; position: absolute; top: 0; left: 0; right: 0; bottom: 0; background-color: #fff; opacity: 0.8;}
 .page-loader.ld-loading {display: block;}
@@ -52,6 +19,7 @@ a.text-primary:hover, a.text-primary:focus {color: #000000 !important;}
 .modal.modal-compact .modal-body {padding-top: 0px !important; padding-bottom: 25px !important;}
 
 .dropdown-menu {font-size: 0.813rem;}
+.sidebar {min-height: 100vh;}
 
 /*=====================================================================================================*/
 
@@ -143,7 +111,7 @@ a.text-primary:hover, a.text-primary:focus {color: #000000 !important;}
 #wall-component .wall-item-tools .btn i {margin-right: 5px;}
 #wall-component .wall-wrap-childs {display: none;}
 #wall-component .media-object {width: 60px; height: 60px;}
-#wall-component .media-body {margin-left: 10px; font-size: 14px;}
+#wall-component .media-body {margin-left: 10px; font-size: 14px; word-break: break-word;}
 #wall-component .media-heading {font-size: 13px;}
 #wall-component a {color: #25378b;}
 
@@ -236,3 +204,4 @@ a.text-primary:hover, a.text-primary:focus {color: #000000 !important;}
 
 .mail-sidebar .profile-list-item {position: relative;}
 .mail-sidebar .profile-list-item .notification-ripple {top: 10px; right: 10px;}
+.mail-sidebar .menu-bar .profile-list-item.selected {background-color: #e8e9ed;}
