--- a/templates/main_v1/css/custom.css
+++ b/templates/main_v1/css/custom.css
@@ -96,6 +96,12 @@
 .video-wrap {position: relative; padding-bottom: 56.25%; /* 16:9 */ padding-top: 25px; height: 0;}
 .video-wrap iframe {position: absolute; top: 0; left: 0; width: 100%; height: 100%;}
 
+@media (min-width: 1440px) {
+	.video-wrap {padding-bottom: 0%; height: auto; max-width: 480px; height: 320px; margin: 0 auto; }
+	.video-wrap iframe {position: relative;}
+}
+
+
 #wall-component {}
 #wall-component .wall-panel .card-body {padding-top: 15px;}
 #wall-component .wall-from {}
