--- a/templates/main_v1/css/custom.css
+++ b/templates/main_v1/css/custom.css
@@ -53,6 +53,7 @@
 #courses--list .item {margin-bottom: 30px;}
 #courses--list .item .badge-free {position: absolute; top: 15px; right: 0px; font-size: 17px; min-width: 100px; font-weight: bold; padding-right: 20px; padding-left: 20px; border-top-right-radius: 0px; border-bottom-right-radius: 0px;}
 #courses--list .item .card-text {height: 120px; overflow: hidden; text-overflow: ellipsis; margin-bottom: 20px;}
+#courses--list .item .card-text p {font-size: 1em; margin: 0px;}
 
 .course-card {}
 .course-card--img {margin: 0px 0px 15px 0px; width: 480px; max-width: 100%;}
