--- a/templates/main_v1/css/custom.css
+++ b/templates/main_v1/css/custom.css
@@ -23,6 +23,200 @@
 
 .card .card-title {text-transform: none;}
 
+.ld-loading .panel-body, .ld-loading .over-white, .ld-loading .prof-body {
+  position: relative;
+}
+.ld-loading .panel-body > *, .ld-loading .over-white > * {
+  transition: opacity 0.3s;
+  opacity: 0.2;
+}
+.ld-loading .panel-body:before, .ld-loading .over-white:before {
+  display: block;
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 50;
+}
+.ld-loading .loader {
+  display: block;
+}
+.loader {
+  display: none;
+  position: absolute;
+  top: 45%;
+  left: 0;
+  right: 0;
+  z-index: 100;
+}
+.loader-bar,
+.loader-bar:before,
+.loader-bar:after {
+  background: #00A3FF;
+  -webkit-animation: load-bar-an 1s infinite ease-in-out;
+  animation: load-bar-an 1s infinite ease-in-out;
+  width: 0.66em;
+  height: 0.66em;
+}
+.loader-bar {
+  color: #00A3FF;
+  text-indent: -9999em;
+  margin: auto auto;
+  position: relative;
+  font-size: 11px;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+.loader-bar:before,
+.loader-bar:after {
+  position: absolute;
+  top: 0;
+  content: '';
+}
+.loader-bar:before {
+  left: -1em;
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
+.loader-bar:after {
+  left: 1em;
+}
+.loader .loader-message {width: 600px; text-align: center; margin: 0 auto; margin-top: 20px; color: #00A3FF; display: none;}
+
+
+@-webkit-keyframes load-bar-an {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 0;
+    height: 2em;
+  }
+  40% {
+    box-shadow: 0 -1em;
+    height: 2.6em;
+  }
+}
+@keyframes load-bar-an {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 0;
+    height: 2em;
+  }
+  40% {
+    box-shadow: 0 -1em;
+    height: 2.6em;
+  }
+}
+.loader-spin,
+.loader-spin:after {
+  border-radius: 50%;
+  width: 3em;
+  height: 3em;
+}
+.loader-spin {
+  margin: auto auto;
+  font-size: 10px;
+  position: relative;
+  text-indent: -9999em;
+  /*border-top: 0.8em solid rgba(246, 168, 33, 0.2);
+  border-right: 0.8em solid rgba(246, 168, 33, 0.2);
+  border-bottom: 0.8em solid rgba(246, 168, 33, 0.2);
+  border-left: 0.8em solid #00A3FF;*/
+
+  border-top: 0.3em solid #00A3FF;
+  border-right: 0.3em solid #00A3FF;
+  border-bottom: 0.3em solid #00A3FF;
+  border-left: 0.3em solid rgba(254, 254, 254, 0.0);
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation: load-spin-an 1.1s infinite linear;
+  animation: load-spin-an 1.1s infinite linear;
+}
+@-webkit-keyframes load-spin-an {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@keyframes load-spin-an {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+.loader-dots,
+.loader-dots:before,
+.loader-dots:after {
+  border-radius: 30%;
+  width: 1.2em;
+  height: 1.2em;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation: load-dots-an 1.8s infinite ease-in-out;
+  animation: load-dots-an 1.8s infinite ease-in-out;
+}
+.loader-dots {
+  color: #00A3FF;
+  font-size: 10px;
+  margin: auto auto;
+  position: relative;
+  text-indent: -9999em;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+.loader-dots:before,
+.loader-dots:after {
+  content: '';
+  position: absolute;
+  top: 0;
+}
+.loader-dots:before {
+  left: -2em;
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
+.loader-dots:after {
+  left: 2em;
+}
+@-webkit-keyframes load-dots-an {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 2em 0 -1.3em;
+  }
+  50% {
+    box-shadow: 0 2em 0 0;
+  }
+}
+@keyframes load-dots-an {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 2em 0 -1.3em;
+  }
+  50% {
+    box-shadow: 0 2em 0 0;
+  }
+}
+
 /*=====================================================================================================*/
 
 .auth .brand-logo {text-align: center;}
