--- a/templates/main_v1/css/custom.css
+++ b/templates/main_v1/css/custom.css
@@ -244,10 +244,13 @@
 #main--news-block .news-item {padding-bottom: 15px;}
 
 #courses--list {}
+#courses--list .card .card-body {padding-top: 1rem;}
 #courses--list .item {margin-bottom: 30px;}
 #courses--list .item .badge-free {position: absolute; top: 15px; right: 0px; font-size: 17px; min-width: 100px; font-weight: bold; padding-right: 20px; padding-left: 20px; border-top-right-radius: 0px; border-bottom-right-radius: 0px;}
-#courses--list .item .card-text {height: 120px; overflow: hidden; text-overflow: ellipsis; margin-bottom: 20px;}
+#courses--list .item .badge-type {position: absolute; top: 15px; left: 0px; font-size: 14px; min-width: 100px; font-weight: bold; padding-right: 20px; padding-left: 20px; border-top-left-radius: 0px; border-bottom-left-radius: 0px;}
+#courses--list .item .card-text {height: 55px; overflow: hidden; text-overflow: ellipsis; margin-bottom: 20px; font-size: 0.8rem;}
 #courses--list .item .card-text p {font-size: 1em; margin: 0px;}
+#courses--list .card .card-title {min-height: 32px;}
 
 .course-card {}
 .course-card--img {margin: 0px 0px 15px 0px; width: 480px; max-width: 100%;}
@@ -374,11 +377,12 @@
 .roadmap-item .item-row:before {content: ""; position: absolute; left: 0px; right: 0px; height: 1px; background-color: #676a6d; top: 50%; margin-top: 0px;}
 .roadmap-item .item-row .roadmap-mark {cursor: pointer; display: inline-block; position: absolute; height: 34px; top: 23px; border: 2px solid #fff; box-sizing: border-box; border-radius: 0px; min-width: 100px; text-align: center; color: #fff; font-size: 13px; font-weight: bold; line-height: 30px; padding: 0px 10px; padding-right: 30px; padding-left: 35px; box-sizing: border-box; transition: min-width 0.3s;}
 .roadmap-item .item-row .roadmap-mark > span {display: block; overflow: hidden; white-space: pre;}
+.roadmap-item .item-row .roadmap-mark > span.icon {border: 2px solid #ffffff; width: 25px; height: 25px; line-height: 21px; font-size: 15px;}
 .roadmap-item .item-row .roadmap-mark:hover {/*min-width: 160px;*/ z-index: 10; transition: min-width 0.3s;}
 .roadmap-item .item-row .roadmap-mark:hover > span {/*overflow: initial;*/}
 .roadmap-item .roadmap-mark .btn-group {position: absolute; right: 10px; top: 0px;}
 .roadmap-item .roadmap-mark .btn-group .btn-menu {display: inline-block; width: 20px; cursor: pointer;}
-.roadmap-item .roadmap-mark .icon {position: absolute; top: 0px; left: 2px; border-radius: 50%; width: 30px; height: 30px; font-size: 20px;}
+.roadmap-item .roadmap-mark .icon {position: absolute; top: 2px; left: 4px; border-radius: 50%; width: 30px; height: 30px; font-size: 20px;}
 
 .roadmap-mark .info {position: absolute; visibility: hidden; opacity: 0; box-sizing: border-box; bottom: 34px; left: 0px; background-color: #fff; border: 1px solid #676a6d; width: 200px; color: #676a6d; text-align: left; padding: 10px 20px; border-radius: 5px; font-size: 12px; transition: opacity 0.3s, visibility 0.3s;}
 .roadmap-mark .info ul {list-style: none; padding: 0; margin: 0; line-height: 16px; font-weight: normal;}
@@ -413,3 +417,25 @@
 #support-ticket-list {}
 
 table tr.bg-info td , table tr.bg-info a {color: #ffffff;}
+
+#player-module {}
+#player-module .card-body {padding: 0rem; padding-bottom: 1.75rem;}
+#player-module .video-container {padding-right: 0px;}
+#player-module .video-lock {position: absolute; top: 0; left: 0; right: 0; bottom: 0;}
+#player-module .video-lock:before {content: ""; position: absolute; width: 100%; height: 100%; top: 0; left: 0; background-color: #000; opacity: 0.6;}
+#player-module .video-lock * {position: relative; z-index: 1;}
+#player-module .video-lock .text {color: #fff; font-size: 1.2rem; margin-bottom: 20px;}
+#player-module .playlist {font-size: 0.75rem;}
+#player-module .playlist-container {position: relative; padding-left: 0px;}
+#player-module .playlist-wrap {position: absolute; top: 0; left: 0px; right: 15px; bottom: 0; overflow-y: auto; /*border-left: 3px solid #25378b;*/}
+#player-module .playlist-wrap.nowrap {overflow-y: inherit;}
+#player-module .nav-link {position: relative; border-bottom: 1px solid #414754; color: #707889; padding: 1.4rem 1rem; width: 100%; background-color: #2c2f41;}
+#player-module .nav-link i {font-size: 1.2rem; line-height: 1rem; margin-right: 10px; vertical-align: top; margin-top: 3px;}
+#player-module .nav-link .title {color: #ffffff;}
+#player-module .nav-link.active {/*background-color: #25378b;*/ color: #ffffff;}
+#player-module .nav-link.active i {color: #02abfe;}
+#player-module .nav-link.active:before {content: ""; position: absolute; left: 0; top: 0; bottom: 0; width: 6px; background-color: #02abfe;}
+#player-module .nav-link.active.first:before {right: 0; left: auto;}
+#player-module .video-info {font-size: 0.9rem;}
+
+hr.primary {border-top-color: #25378b;}
