--- a/templates/main_v1/css/custom.css
+++ b/templates/main_v1/css/custom.css
@@ -440,12 +440,14 @@ table tr.bg-info td , table tr.bg-info a {color: #ffffff;}
 
 hr.primary {border-top-color: #25378b;}
 
+#auth--login-form .form-check .form-check-label input[type="checkbox"] + .input-helper:before,
 #auth--register-form .form-check .form-check-label input[type="checkbox"] + .input-helper:before {
   border: solid #25378b;
   border-width: 1px;
   background: transparent;
 }
 
+#auth--login-form .form-check .form-check-label input[type="checkbox"]:checked + .input-helper:before, 
 #auth--register-form .form-check .form-check-label input[type="checkbox"]:checked + .input-helper:before {
   background: #25378b;
 }
