--- a/templates/main_v1/css/custom.css
+++ b/templates/main_v1/css/custom.css
@@ -424,7 +424,7 @@
 #support-ticket .card.answer {margin-left: 50px; background-color: #fff8bc; border-color: #ffc107;}
 #support-ticket-list {}
 
-table tr.bg-info td , table tr.bg-info a {color: #ffffff;}
+table tr.bg-info td , table tr.bg-info a, table tr.bg-info a:hover {color: #ffffff !important;}
 
 #player-module {}
 #player-module .card-body {padding: 0rem; padding-bottom: 1.75rem;}
